--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "cannon-es": "^0.20.0",
-    "three": "^0.178.0"
+    "three": "^0.178.0",
+    "three-stdlib": "^2.36.0"
   }
 }
